homework5/todoweb-service-lb.yaml
apiVersion: v1
kind: Service
metadata:
  name: todoweb-lb
  labels:
    app: todoweb
spec:
  selector:
    app: todoweb
  ports:
    - name: http
      port: 80
      targetPort: 80
  type: LoadBalancer
