homework5/todoweb-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: todoweb-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: gce-k8s-master.example.com 
    http:
      paths:
      - path: /
        backend:
          serviceName: todoweb 
          servicePort: 80
